Ajustes Menu Mi Buzón, Ajuste menu Mi RIT, Estilos

--- a/hybris/hybris/bin/custom/sdh/sdhstorefront/web/webroot/WEB-INF/_ui-src/responsive/themes/alpha/less/style.less
+++ b/hybris/hybris/bin/custom/sdh/sdhstorefront/web/webroot/WEB-INF/_ui-src/responsive/themes/alpha/less/style.less
@@ -5,3 +5,99 @@
 @import "../../../lib/ybase-0.1.0/less/ybase.less";
 @import "../../../lib/ybase-0.1.0/less/addons.less";
 @import "variables.less";
+
+
+//
+// Load core variables and mixins
+// --------------------------------------------------
+
+//@import "../../../../../../responsive/lib/ybase-0.1.0/less/ybase.less";
+//@import "../../../../../../responsive/lib/ybase-0.1.0/less/addons.less";
+//@import "variables.less";
+
+
+
+.navigation--top .nav__left .simple-banner-component img {
+  max-width: 90%;
+  height: auto;
+  display: block;
+  margin-left: auto; 
+  margin-right: auto;
+  width: 90%;
+  
+}
+
+.navigation--bottom .nav__links--products li a {
+  color: #AEB6BF;
+}
+
+
+.navigation--bottom {
+  background-color: #ffffff;
+}
+
+.main-footer .footer__top .footer__nav--container .footer__nav--links a {
+  color: #AEB6BF;
+}
+
+
+.main-footer {
+  background: #ffffff;  
+}
+
+.main-footer .links {
+   background: #ffffff;
+}
+
+.main-footer .copyright {
+  background: #ffffff;
+}
+
+.main-footer .copyright .copyright-text {
+  color: #AEB6BF;
+  background: #ffffff;
+}
+
+.main-footer .copyright .container {
+  background: #ffffff;
+}
+
+
+.footer__right .footer__dropdown .form-control {
+  background: #ffffff;
+  color: #AEB6BF;
+}
+
+.breadcrumb-section {
+  background: #92d4f5;
+}
+
+.breadcrumb-section .breadcrumb {
+  background: #92d4f5;
+}
+
+
+.btn-primary {
+  background-color: #56ace3;
+  border-color: #56ace3;
+}
+
+
+.btn-primary:hover {
+  color: #000000;
+  background-color: #92d4f5;
+  border-color: #92d4f5;
+}
+
+.btn-primary.focus {
+  color: #000000;
+  background-color: #92d4f5;
+  border-color: #92d4f5;
+}
+.btn-primary:hover {
+  color: #000000;
+  background-color: #92d4f5;
+  border-color: #92d4f5;
+}
+
+
