Ajustes certificacion MI RIT

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/_ui-src/responsive/themes/psalpha/less/style.less
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/_ui-src/responsive/themes/psalpha/less/style.less
@@ -134,3 +134,128 @@
   border-color: #92d4f5;
 }
 
+.p {
+  border-width:0px;
+  position:absolute;
+  font-family:'Arial Negrita', 'Arial Normal', 'Arial';
+  font-weight:700;
+  font-style:normal;
+  font-size:12px;
+  color:#FFFFFF;
+}
+
+.avisoheadline {
+  border-width:0px;
+  position:inherit;
+  width:1005px;
+  height:33px;
+  background:inherit;
+  background-color:rgba(0, 0, 153, 1);
+  box-sizing:border-box;
+  border-width:1px;
+  border-style:solid;
+  border-color:rgba(121, 121, 121, 1);
+  border-radius:0px;
+  -moz-box-shadow:none;
+  -webkit-box-shadow:none;
+  box-shadow:none;
+  vertical-align:middle;
+}
+
+.avisobody{
+  border-width:0px;
+  position:inherit;
+  width:1005px;
+  height:60px;
+  background:inherit;
+  background-color:rgba(255, 255, 255, 1);
+  box-sizing:border-box;
+  border-width:1px;
+  border-style:solid;
+  border-color:rgba(121, 121, 121, 1);
+  border-radius:0px;
+  -moz-box-shadow:none;
+  -webkit-box-shadow:none;
+  box-shadow:none;
+  text-align:left;
+  margin: 0px 0 0px;
+}
+
+.cintillo{
+  border-width:0px;
+  position:inherit;
+  width:1013px;
+  height:18px;
+  background:inherit;
+  background-color:rgba(228, 228, 228, 1);
+  box-sizing:border-box;
+  border-width:1px;
+  border-style:solid;
+   border-color:rgba(153, 153, 153, 1);
+  border-radius:0px;
+  -moz-box-shadow:none;
+  -webkit-box-shadow:none;
+  box-shadow:none;
+  font-family:'Arial Negrita Cursiva', 'Arial Normal', 'Arial';
+  font-weight:700;
+  font-style:italic;
+  font-size:12px;
+  margin-bottom: 10px;
+}
+
+.inputdropdown{
+  position:absolute;
+  font-family:'Arial Normal', 'Arial';
+  font-weight:400;
+  font-style:normal;
+  font-size:12px;
+  text-decoration:none;
+  color:#000000;
+  border-width: 1px;
+  border-style: solid;
+}
+
+.avisos{
+  font-size:9px !important;
+}
+
+.vehiculos{
+  font-size:10px !important;
+}
+
+.inputtextnew{
+  position:inherit;
+  font-family:'Arial Normal', 'Arial';
+  font-weight:400;
+  font-style:normal;
+  font-size:12px;
+  text-decoration:none;
+  color:#000000;
+  text-align:left;
+  vertical-align:text-bottom;
+  min-height: 0px;
+}
+
+.inputlabelnew{
+  margin-right: 5px;
+  position:absolute;
+  font-family:'Arial Normal', 'Arial';
+  font-weight:400;
+  font-style:normal;
+  font-size:12px;
+  color:#333333;
+  text-align:right;
+  vertical-align: middle;
+}
+
+.boton{
+  font-size:14px;
+  font-family:'Arial Normal', 'Arial';
+  font-color:black;
+  height: 25px;
+  text-align: center;
+  margin-top: 6px;
+  -webkit-appearance: button;
+  border-radius: 5px;
+}
+
