--- a/hybris/hybris/bin/custom/sdh/sdhstorefront/web/webroot/_ui/responsive/theme-alpha/css/style.css
+++ b/hybris/hybris/bin/custom/sdh/sdhstorefront/web/webroot/_ui/responsive/theme-alpha/css/style.css
@@ -24093,3 +24093,118 @@ author: Vikas Gupta
   background-color: #92d4f5;
   border-color: #92d4f5;
 }
+.p {
+  border-width: 0px;
+  position: absolute;
+  font-family: 'Arial Negrita', 'Arial Normal', 'Arial';
+  font-weight: 700;
+  font-style: normal;
+  font-size: 12px;
+  color: #FFFFFF;
+}
+.avisoheadline {
+  border-width: 0px;
+  position: inherit;
+  width: 1005px;
+  height: 33px;
+  background: inherit;
+  background-color: #000099;
+  box-sizing: border-box;
+  border-width: 1px;
+  border-style: solid;
+  border-color: #797979;
+  border-radius: 0px;
+  -moz-box-shadow: none;
+  -webkit-box-shadow: none;
+  box-shadow: none;
+  vertical-align: middle;
+}
+.avisobody {
+  border-width: 0px;
+  position: inherit;
+  width: 1005px;
+  height: 60px;
+  background: inherit;
+  background-color: #ffffff;
+  box-sizing: border-box;
+  border-width: 1px;
+  border-style: solid;
+  border-color: #797979;
+  border-radius: 0px;
+  -moz-box-shadow: none;
+  -webkit-box-shadow: none;
+  box-shadow: none;
+  text-align: left;
+  margin: 0px 0 0px;
+}
+.cintillo {
+  border-width: 0px;
+  position: inherit;
+  width: 1013px;
+  height: 18px;
+  background: inherit;
+  background-color: #e4e4e4;
+  box-sizing: border-box;
+  border-width: 1px;
+  border-style: solid;
+  border-color: #999999;
+  border-radius: 0px;
+  -moz-box-shadow: none;
+  -webkit-box-shadow: none;
+  box-shadow: none;
+  font-family: 'Arial Negrita Cursiva', 'Arial Normal', 'Arial';
+  font-weight: 700;
+  font-style: italic;
+  font-size: 12px;
+  margin-bottom: 10px;
+}
+.inputdropdown {
+  position: absolute;
+  font-family: 'Arial Normal', 'Arial';
+  font-weight: 400;
+  font-style: normal;
+  font-size: 12px;
+  text-decoration: none;
+  color: #000000;
+  border-width: 1px;
+  border-style: solid;
+}
+.avisos {
+  font-size: 9px !important;
+}
+.vehiculos {
+  font-size: 10px !important;
+}
+.inputtextnew {
+  position: inherit;
+  font-family: 'Arial Normal', 'Arial';
+  font-weight: 400;
+  font-style: normal;
+  font-size: 12px;
+  text-decoration: none;
+  color: #000000;
+  text-align: left;
+  vertical-align: text-bottom;
+  min-height: 0px;
+}
+.inputlabelnew {
+  margin-right: 5px;
+  position: absolute;
+  font-family: 'Arial Normal', 'Arial';
+  font-weight: 400;
+  font-style: normal;
+  font-size: 12px;
+  color: #333333;
+  text-align: right;
+  vertical-align: middle;
+}
+.boton {
+  font-size: 14px;
+  font-family: 'Arial Normal', 'Arial';
+  font-color: black;
+  height: 25px;
+  text-align: center;
+  margin-top: 6px;
+  -webkit-appearance: button;
+  border-radius: 5px;
+}
