Ajustes menu y breadcrumbs

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/_ui-src/responsive/themes/psalpha/less/style.less
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/_ui-src/responsive/themes/psalpha/less/style.less
@@ -302,3 +302,7 @@ div.dataTables_paginate,
 div.dataTables_info {
     padding: 6px;
 }
+
+.breadcrumb-section .breadcrumb {
+  text-transform: capitalize;
+}
