--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/_ui/responsive/theme-psalpha/css/style.css
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/_ui/responsive/theme-psalpha/css/style.css
@@ -24273,3 +24273,6 @@ div.dataTables_paginate,
 div.dataTables_info {
   padding: 6px;
 }
+.breadcrumb-section .breadcrumb {
+  text-transform: capitalize;
+}
