cambio de estilo en botón buscar

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/_ui/responsive/theme-psalpha/css/style.css
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/_ui/responsive/theme-psalpha/css/style.css
@@ -24276,3 +24276,7 @@ div.dataTables_info {
 .breadcrumb-section .breadcrumb {
   text-transform: capitalize;
 }
+
+input[type="search"] {
+    min-height: 8px !important;
+}
