Ajuste de tipo de fuente Helvetica

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/_ui-src/responsive/themes/psalpha/less/style.less
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/_ui-src/responsive/themes/psalpha/less/style.less
@@ -22,7 +22,7 @@
 
 .nav__links--account {
   display: inline-block;
-  font-family: Arial;
+  font-family: Helvetica;
   font-size: 12px;
   font-weight:bold;
   color: #0000ff;
@@ -31,7 +31,7 @@
 }
 
 .navigation--bottom .nav__links--products li a {
-  font-family: Arial;
+  font-family: Helvetica;
   font-size: 13px;
   font-weight: 400;
   color: #ffffff;  
@@ -137,7 +137,7 @@
 .p {
   border-width:0px;
   position:absolute;
-  font-family:'Arial Negrita', 'Arial Normal', 'Arial';
+  font-family:'Helvetica Negrita', 'Helvetica Normal', 'Helvetica';
   font-weight:700;
   font-style:normal;
   font-size:12px;
@@ -196,7 +196,7 @@
   -moz-box-shadow:none;
   -webkit-box-shadow:none;
   box-shadow:none;
-  font-family:'Arial Negrita Cursiva', 'Arial Normal', 'Arial';
+  font-family:'Helvetica Negrita Cursiva', 'Helvetica Normal', 'Helvetica';
   font-weight:700;
   font-style:italic;
   font-size:12px;
@@ -205,7 +205,7 @@
 
 .inputdropdown{
   position:absolute;
-  font-family:'Arial Normal', 'Arial';
+  font-family:'Helvetica Normal', 'Helvetica';
   font-weight:400;
   font-style:normal;
   font-size:12px;
@@ -225,7 +225,7 @@
 
 .inputtextnew{
   position:inherit;
-  font-family:'Arial Normal', 'Arial';
+  font-family:'Helvetica Normal', 'Helvetica';
   font-weight:400;
   font-style:normal;
   font-size:12px;
@@ -239,7 +239,7 @@
 .inputlabelnew{
   margin-right: 5px;
   position:absolute;
-  font-family:'Arial Normal', 'Arial';
+  font-family:'Helvetica Normal', 'Helvetica';
   font-weight:400;
   font-style:normal;
   font-size:12px;
@@ -250,7 +250,7 @@
 
 .boton{
   font-size:14px;
-  font-family:'Arial Normal', 'Arial';
+  font-family:'Helvetica Normal', 'Helvetica';
   font-color:black;
   height: 25px;
   text-align: center;
@@ -306,3 +306,8 @@ div.dataTables_info {
 .breadcrumb-section .breadcrumb {
   text-transform: capitalize;
 }
+
+body {
+  font-family: 'Helvetica', 'Arial', sans-serif;
+}
+
