--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/_ui-src/responsive/themes/psalpha/less/style.less
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/_ui-src/responsive/themes/psalpha/less/style.less
@@ -311,3 +311,11 @@ body {
   font-family: 'Helvetica', 'Arial', sans-serif;
 }
 
+.main-footer .footer__top .footer__nav--container .footer__nav--links a {
+  color: #000000;
+}
+
+.main-footer {
+  font-family: 'Helvetica', 'Arial', sans-serif;
+}
+
