--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/_ui/responsive/theme-psalpha/css/style.css
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/_ui/responsive/theme-psalpha/css/style.css
@@ -24282,3 +24282,9 @@ body {
 input[type="search"] {
   min-height: 8px !important;
 }
+.main-footer .footer__top .footer__nav--container .footer__nav--links a {
+  color: #000000;
+}
+.main-footer {
+  font-family: 'Helvetica', 'Arial', sans-serif;
+}
