Ajustes de espacio en los links del Footer

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/_ui-src/responsive/themes/psalpha/less/style.less
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/_ui-src/responsive/themes/psalpha/less/style.less
@@ -319,3 +319,16 @@ body {
   font-family: 'Helvetica', 'Arial', sans-serif;
 }
 
+.main-footer .links {
+  padding-left: 0px;
+}
+
+.col-md-8 {
+    width: 86.66666667%;
+  }
+  
+.col-md-offset-2 {
+    margin-left: 6.66666667%;
+  }  
+
+
