--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/_ui/responsive/theme-psalpha/css/style.css
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/_ui/responsive/theme-psalpha/css/style.css
@@ -24276,12 +24276,21 @@ div.dataTables_info {
 .breadcrumb-section .breadcrumb {
   text-transform: capitalize;
 }
-
-
 body {
   font-family: 'Helvetica', 'Arial', sans-serif;
 }
-
-input[type="search"] {
-    min-height: 8px !important;
+.main-footer .footer__top .footer__nav--container .footer__nav--links a {
+  color: #000000;
+}
+.main-footer {
+  font-family: 'Helvetica', 'Arial', sans-serif;
+}
+.main-footer .links {
+  padding-left: 0px;
+}
+.col-md-8 {
+  width: 86.66666667%;
+}
+.col-md-offset-2 {
+  margin-left: 6.66666667%;
 }
