--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/_ui/responsive/theme-psalpha/css/style.css
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/_ui/responsive/theme-psalpha/css/style.css
@@ -19969,7 +19969,7 @@ a.ui-button:active,
 .main-header .md-secondary-navigation ul li {
   font-weight: 600;
   font-size: 14px;
-  text-transform: uppercase;
+  text-transform: none;
   display: flex;
 }
 .main-header .md-secondary-navigation ul a,
@@ -24310,61 +24310,59 @@ input[type="search"] {
 .col-md-offset-2 {
   margin-left: 6.66666667%;
 }
-
 /*
-## ajuste de estilos cuerpo general página dev-maria
+## ajuste de estilos cuerpo general pagina dev-maria
 ********************************************************************/
 
 thead {
-	background-color: rgb(235, 235, 228) !important;
-	text-color: #ffffff !important;
+    background-color: rgb(235, 235, 228) !important;
+    text-color: #ffffff !important;
 }
 
 td, th {
-	border-top: solid 1px #000000 !important;
-	border-bottom: solid 1px #000000 !important;
-	border-right: solid 1px #000000 !important;
-	border-left: solid 1px #000000 !important;
-	vertical-align: inherit !important;
+    border-top: solid 1px #000000 !important;
+    border-bottom: solid 1px #000000 !important;
+    border-right: solid 1px #000000 !important;
+    border-left: solid 1px #000000 !important;
+    vertical-align: inherit !important;
 }
 
 .labeltabletd {
-	text-align: center !important;
-	color: #1b1464 !important;
-	text-transform: none !important;
+    text-align: center !important;
+    color: #1b1464 !important;
+    text-transform: none !important;
 }
 
 .inputcodciuu, .tablenumiden, .tabledomatri, .tablecodpost {
-	width: 80px !important;
-	text-align: center !important;
+    width: 80px !important;
+    text-align: center !important;
 }
 
 .tablefechas, .tableident  {
-	width: 75px !important;
-	text-align: center !important;
+    width: 75px !important;
+    text-align: center !important;
 }
 
 .tablenombre, .tabledenomi  {
-	width: 400px !important;
+    width: 400px !important;
 }
 
 .tablecantperoc  {
-	width: 55px !important;
-	text-align: center !important;
+    width: 55px !important;
+    text-align: center !important;
 }
 
 .tabletiprela {
-	width: 300px !important;
+    width: 300px !important;
 }
 
 .tableamplia{
-	width: auto !important;
+    width: auto !important;
 }
 
 .container {
-	margin-right: 1px !important;
-	margin-left: 1px !important;
-	padding-left: 10px !important;
-	padding-right: 10px !important;
+    margin-right: 1px !important;
+    margin-left: 1px !important;
+    padding-left: 10px !important;
+    padding-right: 10px !important;
 }
-
