--- a/hybris/hybris/bin/custom/sdh/sdhstorefront/web/webroot/_ui/responsive/theme-alpha/css/style.css
+++ b/hybris/hybris/bin/custom/sdh/sdhstorefront/web/webroot/_ui/responsive/theme-alpha/css/style.css
@@ -19969,7 +19969,7 @@ a.ui-button:active,
 .main-header .md-secondary-navigation ul li {
   font-weight: 600;
   font-size: 14px;
-  text-transform: uppercase;
+  text-transform: none;
   display: flex;
 }
 .main-header .md-secondary-navigation ul a,
