Se agregan estilos para ICA

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/_ui-src/responsive/themes/psalpha/less/style.less
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/_ui-src/responsive/themes/psalpha/less/style.less
@@ -354,3 +354,68 @@ input[type="search"] {
   }  
 
 
+/*
+## ajuste de estilos cuerpo general pagina dev-maria
+********************************************************************/
+
+thead {
+    background-color: rgb(235, 235, 228) !important;
+    text-color: #ffffff !important;
+}
+
+td, th {
+    border-top: solid 1px #000000 !important;
+    border-bottom: solid 1px #000000 !important;
+    border-right: solid 1px #000000 !important;
+    border-left: solid 1px #000000 !important;
+    vertical-align: inherit !important;
+}
+
+.labeltabletd {
+    text-align: center !important;
+    color: #1b1464 !important;
+    text-transform: none !important;
+}
+
+.inputcodciuu, .tablenumiden, .tabledomatri, .tablecodpost {
+    width: 80px !important;
+    text-align: center !important;
+}
+
+.tablefechas, .tableident  {
+    width: 75px !important;
+    text-align: center !important;
+}
+
+.tablenombre, .tabledenomi  {
+    width: 400px !important;
+}
+
+.tablecantperoc  {
+    width: 55px !important;
+    text-align: center !important;
+}
+
+.tabletiprela {
+    width: 300px !important;
+}
+
+.tableamplia{
+    width: auto !important;
+}
+
+.container {
+    margin-right: 1px !important;
+    margin-left: 1px !important;
+    padding-left: 10px !important;
+    padding-right: 10px !important;
+}
+
+.main-header .md-secondary-navigation ul,
+.main-header .md-secondary-navigation ul li {
+  text-transform: none !important;
+  }
+
+.main-header .md-secondary-navigation a {
+  text-transform: none !important;
+}
