--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/_ui-src/responsive/themes/psalpha/less/style.less
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/_ui-src/responsive/themes/psalpha/less/style.less
@@ -416,6 +416,39 @@ td, th {
   text-transform: none !important;
   }
 
+.breadcrumb-section {
+    padding-left: 2px;
+}
+
 .main-header .md-secondary-navigation a {
-  text-transform: none !important;
+    text-transform: none;
+}
+
+.navigation--bottom .nav__links--products li a {
+    padding: 10px 15px;
+    text-aling: center !important;
+}
+.navigation--bottom .nav__links--primary .sub__navigation {
+    width: auto;
+	}
+	
+	.breadcrumb-section {
+	padding-left: 2px;
+}
+
+.main-header .md-secondary-navigation a {
+	text-transform: none;
+}
+
+.navigation--bottom .nav__links--products li a {
+	padding: 10px 15px;
+	text-aling: center !important;
+}
+
+li {
+	text-align: -webkit-center;
+}
+
+.navigation--bottom .nav__links--primary .sub__navigation {
+	width: auto;
 }
