--- a/hybris/hybris/bin/custom/sdh/sdhstorefront/web/webroot/WEB-INF/_ui-src/responsive/lib/ybase-0.1.0/less/_navigation.less
+++ b/hybris/hybris/bin/custom/sdh/sdhstorefront/web/webroot/WEB-INF/_ui-src/responsive/lib/ybase-0.1.0/less/_navigation.less
@@ -1508,3 +1508,6 @@ main.offcanvas {
 .search-results-highlight {
 	font-weight: bold;
 }
+.navigation--bottom .nav__links--primary .sub__navigation {
+	width: auto;
+}
