Se agrega estilo para centrar el Menú

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/_ui-src/responsive/themes/psalpha/less/style.less
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/_ui-src/responsive/themes/psalpha/less/style.less
@@ -411,6 +411,10 @@ td, th {
     padding-right: 10px !important;
 }
 
+/*
+## ajuste de estilos menu pagina dev-maria
+********************************************************************/
+
 .main-header .md-secondary-navigation ul,
 .main-header .md-secondary-navigation ul li {
   text-transform: none !important;
