--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/_ui-src/responsive/themes/psalpha/less/style.less
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/_ui-src/responsive/themes/psalpha/less/style.less
@@ -456,3 +456,23 @@ li {
 .navigation--bottom .nav__links--primary .sub__navigation {
 	width: auto;
 }
+
+.navigation--middle .nav__right {
+  padding-right: 6%;
+}
+
+.main-header .md-secondary-navigation li span.logged_in {
+    color: black;
+}
+.main-header .md-secondary-navigation ul:last-child a, .main-header .md-secondary-navigation ul li:last-child a {
+    color: black;
+}
+.main-header .md-secondary-navigation ul:last-child a,
+.main-header .md-secondary-navigation ul li:last-child a {
+  color: black;
+}
+
+.main-header .md-secondary-navigation a:hover, .main-header .md-secondary-navigation a:focus, .main-header .md-secondary-navigation a:active {
+    color: #ffffff;
+    background: #66cdfc;
+}
