Se agregan cambios en los margenes de la página inicial para que se muestre el botón dentro del tamaño de la página y se agrega avance de reteica

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/_ui-src/responsive/themes/psalpha/less/style.less
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/_ui-src/responsive/themes/psalpha/less/style.less
@@ -476,3 +476,10 @@ li {
     color: #ffffff;
     background: #66cdfc;
 }
+
+header{
+	marging-bottom: 5px;
+}
+.form-group {
+    margin-bottom: 10px;
+}
