--- a/hybris/hybris/bin/custom/sdh/sdhstorefront/web/webroot/_ui/responsive/theme-lambda/css/style.css
+++ b/hybris/hybris/bin/custom/sdh/sdhstorefront/web/webroot/_ui/responsive/theme-lambda/css/style.css
@@ -9735,6 +9735,9 @@ ul.nav__links::after {
 .search-results-highlight {
   font-weight: bold;
 }
+.navigation--bottom .nav__links--primary .sub__navigation {
+  width: auto;
+}
 header {
   background: #f4f4f4;
   margin-bottom: 20px;
