Cambios de estilo en el menú

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/_ui-src/responsive/themes/psalpha/less/style.less
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/_ui-src/responsive/themes/psalpha/less/style.less
@@ -487,3 +487,50 @@ header{
 .labeltabletd {
     width: 100%;
 }
+
+/* #cambios de estilo 13/05/2019 dev-maria */
+
+.navigation--bottom .nav__links--products {
+	max-width: 90%;
+	height: auto;
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+	width: 90%;
+	display: flex;
+	justify-content: center;
+}
+
+.navigation__overflow {
+	max-width: 90%;
+	height: auto;
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+	width: 90%;
+}
+
+.navigation--bottom {
+	max-width: 86%;
+	height: auto;
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+	width: 90%;
+}
+
+.navigation--bottom .nav__link {
+	border-left: 1px solid #ffffff;
+	border-right: 1px solid #ffffff;
+}
+
+.navigation--bottom .nav__links--products li a {
+    font-family: Helvetica;
+    font-size: 13px;
+    font-weight: 400;
+    color: #ffffff;
+}
+
+.navigation--bottom .nav__links--products li a {
+    font-size: 14px;
+}
