modificación de distribución en vista de delineación y publicidad exterior

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/_ui-src/responsive/themes/psalpha/less/style.less
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/_ui-src/responsive/themes/psalpha/less/style.less
@@ -617,3 +617,8 @@ ul.nav__links li {
 
     margin-right: inherit;
 }
+
+.login-section .headline h2, .register-section .headline h2, .checkout-login .headline h2 {
+    margin-top: 0px;
+	margin-bottom: 0px;
+}
