--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/_ui/responsive/theme-psalpha/css/style.css
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/_ui/responsive/theme-psalpha/css/style.css
@@ -24540,3 +24540,9 @@ media (min-width: 1024px ) .navigation--bottom .nav__links--primary .sub-navigat
 ul.nav__links li {
   margin-right: inherit;
 }
+.login-section .headline h2,
+.register-section .headline h2,
+.checkout-login .headline h2 {
+  margin-top: 0px;
+  margin-bottom: 0px;
+}
