cambios en la pantalla de login

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/_ui/responsive/theme-psalpha/css/style.css
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/_ui/responsive/theme-psalpha/css/style.css
@@ -24546,3 +24546,7 @@ ul.nav__links li {
   margin-top: 0px;
   margin-bottom: 0px;
 }
+.redtam {
+  margin-bottom: 0px;
+  width: 50% !important;
+}
