Modificación a Obligaciones Pendientes

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/_ui-src/responsive/themes/psalpha/less/style.less
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/_ui-src/responsive/themes/psalpha/less/style.less
@@ -378,12 +378,12 @@ td, th {
     text-transform: none !important;
 }
 
-.inputcodciuu, .tablenumiden, .tabledomatri, .tablecodpost {
+.inputcodciuu, .tablenumiden, .tabledomatri, .tablecodpost, .tabledoobli {
     width: 80px !important;
     text-align: center !important;
 }
 
-.tablefechas, .tableident  {
+.tablefechas, .tableident, .tableangrav  {
     width: 75px !important;
     text-align: center !important;
 }
