--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/_ui/responsive/theme-psalpha/css/style.css
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/_ui/responsive/theme-psalpha/css/style.css
@@ -24543,7 +24543,7 @@ input[type="search"] {
     margin-top: 0px;
     margin-bottom: 0px;
   }
-  .row .gasorow {
+  .gasorow {
     margin-left: -110px;
     margin-right: -110px;
   }
