Se agregan cambios para relación de pagos y obligaciones

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/_ui/responsive/theme-psalpha/css/style.css
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/_ui/responsive/theme-psalpha/css/style.css
@@ -24337,12 +24337,14 @@ input[type="search"] {
   .inputcodciuu,
   .tablenumiden,
   .tabledomatri,
-  .tablecodpost {
+  .tablecodpost,
+  .tabledoobli {
     width: 80px !important;
     text-align: center !important;
   }
   .tablefechas,
-  .tableident {
+  .tableident,
+  .tableangrav {
     width: 75px !important;
     text-align: center !important;
   }
