Se agrega estado de cuenta

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/_ui-src/responsive/themes/psalpha/less/style.less
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/_ui-src/responsive/themes/psalpha/less/style.less
@@ -359,6 +359,22 @@ input[type="search"] {
 ## ajuste de estilos cuerpo general pagina dev-maria
 ********************************************************************/
 
+.tableedocuenta{
+	border-collapse: inherit !important;
+    border-spacing: 3px !important;
+
+	}
+	.td-colspann{
+	 border-top: solid 0px #000000 !important;
+    border-bottom: solid 0px #000000 !important;
+    border-right: solid 0px #000000 !important;
+    border-left: solid 0px #000000 !important;
+	}
+	
+	.td-total{
+	background-color: #f2f2f2;
+	}
+
 thead {
     background-color: rgb(235, 235, 228) !important;
     text-color: #ffffff !important;
@@ -888,4 +904,7 @@ ul.nav__links li {
     margin-top: 0px;
 	margin-bottom: 0px;
 }
+}
+.cardsinfondo{
+	background: none;
 }
