--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/_ui/responsive/theme-psalpha/css/style.css
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/_ui/responsive/theme-psalpha/css/style.css
@@ -24317,6 +24317,19 @@ input[type="search"] {
   /*
 ## ajuste de estilos cuerpo general pagina dev-maria
 ********************************************************************/
+  .tableedocuenta {
+    border-collapse: inherit !important;
+    border-spacing: 3px !important;
+  }
+  .td-colspann {
+    border-top: solid 0px #000000 !important;
+    border-bottom: solid 0px #000000 !important;
+    border-right: solid 0px #000000 !important;
+    border-left: solid 0px #000000 !important;
+  }
+  .td-total {
+    background-color: #f2f2f2;
+  }
   thead {
     background-color: #ebebe4 !important;
     text-color: #ffffff !important;
@@ -24779,4 +24792,7 @@ input[type="search"] {
     margin-top: 0px;
     margin-bottom: 0px;
   }
+}
+.cardsinfondo {
+  background: none;
 }
