--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/_ui-src/responsive/themes/psalpha/less/style.less
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/_ui-src/responsive/themes/psalpha/less/style.less
@@ -908,3 +908,25 @@ ul.nav__links li {
 .cardsinfondo{
 	background: none;
 }
+
+
+.miritmenu {
+	font-size: 14 px !important;
+	margin: 0px;
+}
+
+.cardmirit {
+	background: none;
+	font-size: 14 px !important;
+	margin: 0px;
+	padding-bottom: 0px;
+}
+
+.miritmenu:hover, .miritmenu:active:hover {
+	outline: transparent;
+}
+
+.miritmenu:focus, .miritmenu:active:focus, .miritmenu.active:focus, .miritmenu.focus, .miritmenu:active.focus,
+	.miritmenu.active.focus {
+	outline: transparent;
+}
