Se agrega Menu fijo

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/_ui-src/responsive/themes/psalpha/less/style.less
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/_ui-src/responsive/themes/psalpha/less/style.less
@@ -1048,3 +1048,34 @@ li {
     text-align: -webkit-center;
 }
 }
+
+
+header {
+	position: fixed;
+	z-index: 100;
+	backgroung: rgba(245, 245, 245, 0.5);
+}
+
+.container_inicial {
+	padding-top: 325px !important;
+}
+
+.container {
+	padding-top: 320px !important;
+}
+
+.login-left-content-slot {
+	padding-top: 250px;
+}
+
+.container_new {
+		max-width: 90%;
+		height: auto;
+		display: block;
+		width: 86%;
+		padding: 0 !important;
+		margin-right: 1px !important;
+		margin-left: 95px !important;
+		padding-left: 1px !important;
+		padding-right: 10px !important;
+	}
