Se agregan cambios para dejar el menú fijo y se agregan cambios a la vista de mi rit

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/_ui/responsive/theme-psalpha/css/style.css
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/_ui/responsive/theme-psalpha/css/style.css
@@ -24924,3 +24924,34 @@ input[type="search"] {
     text-align: -webkit-center;
   }
 }
+header {
+  position: fixed;
+  z-index: 100;
+  backgroung: rgba(245, 245, 245, 0.5);
+}
+.container_agentes_inicial {
+  padding-top: 325px !important;
+  max-width: 90%;
+  height: auto;
+  display: block;
+  width: 86%;
+  margin-right: 1px !important;
+  margin-left: 97px !important;
+}
+.container {
+  padding-top: 305px !important;
+}
+.login-left-content-slot {
+  padding-top: 250px;
+}
+.container_new {
+  max-width: 90%;
+  height: auto;
+  display: block;
+  width: 86%;
+  padding: 0 !important;
+  margin-right: 1px !important;
+  margin-left: 95px !important;
+  padding-left: 1px !important;
+  padding-right: 10px !important;
+}
