--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/_ui-src/responsive/themes/psalpha/less/style.less
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/_ui-src/responsive/themes/psalpha/less/style.less
@@ -942,12 +942,14 @@ ul.nav__links li {
 }
 
 .cardmirit {
-	background: none;
-	font-size: 14 px !important;
-	margin: 0px;
-	padding-bottom: 0px;
+  background: none;
+  font-size: 14 px !important;
+  margin: 0px;
+  padding-bottom: 0px;
 }
-
+.cardtitle{
+  border:1px solid #156ab5;
+}
 .miritmenu:hover, .miritmenu:active:hover {
 	outline: transparent;
 }
@@ -1051,31 +1053,34 @@ li {
 
 
 header {
-	position: fixed;
-	z-index: 100;
-	backgroung: rgba(245, 245, 245, 0.5);
+  position: fixed;
+  z-index: 100;
+  backgroung: rgba(245, 245, 245, 0.5);
 }
-
-.container_inicial {
+.container_agentes_inicial {
 	padding-top: 325px !important;
-}
+	  max-width: 90%;
+  height: auto;
+  display: block;
+  width: 86%;
+   margin-right: 1px !important;
+  margin-left: 97px !important;
 
+}
 .container {
-	padding-top: 320px !important;
+  padding-top: 305px !important;
 }
-
 .login-left-content-slot {
-	padding-top: 250px;
+  padding-top: 250px;
 }
-
 .container_new {
-		max-width: 90%;
-		height: auto;
-		display: block;
-		width: 86%;
-		padding: 0 !important;
-		margin-right: 1px !important;
-		margin-left: 95px !important;
-		padding-left: 1px !important;
-		padding-right: 10px !important;
-	}
+  max-width: 90%;
+  height: auto;
+  display: block;
+  width: 86%;
+  padding: 0 !important;
+  margin-right: 1px !important;
+  margin-left: 95px !important;
+  padding-left: 1px !important;
+  padding-right: 10px !important;
+}
