Se agrega medida de media min-width : 2560px para recorrer el container de la barra de menú

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/_ui-src/responsive/themes/psalpha/less/style.less
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/_ui-src/responsive/themes/psalpha/less/style.less
@@ -1084,3 +1084,10 @@ header {
   padding-left: 1px !important;
   padding-right: 10px !important;
 }
+
+
+@media ( min-width : 2560px) {
+.container {
+  padding-top: 405px !important;
+}
+}
