--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/_ui/responsive/theme-psalpha/css/style.css
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/_ui/responsive/theme-psalpha/css/style.css
@@ -24958,3 +24958,9 @@ header {
   padding-left: 1px !important;
   padding-right: 10px !important;
 }
+
+@media ( min-width : 2560px) {
+.container {
+  padding-top: 405px !important;
+}
+}
