--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/_ui-src/responsive/themes/psalpha/less/style.less
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/_ui-src/responsive/themes/psalpha/less/style.less
@@ -474,12 +474,6 @@ ul.nav__links li {
 	border-top: 1px transparen #ffffff;
 }
 /* terminan los ajustes de la sección del menú */
-.branding-mobile {
-	position: fixed;
-	z-index: 100;
-	width: 100%;
-}
-
 header {
 	position: fixed;
 	z-index: 100;
@@ -514,6 +508,17 @@ header {
 	padding-top: 25%;
 }
 
+.container_agentes_inicial {
+	 padding-top: 28%;
+	  max-width: 90%;
+  height: auto;
+  display: block;
+  width: 86%;
+   margin-right: 1px !important;
+  margin-left: 97px !important;
+
+}
+
 .login-section {
 	padding-top: 45%;
 }
@@ -543,6 +548,9 @@ td, th {
     text-align: center !important;
     color: #1b1464 !important;
     text-transform: none !important;
+
+    width: 100%;
+
 }
 
 .inputcodciuu, .tablenumiden, .tabledomatri, .tablecodpost {
@@ -570,4 +578,8 @@ td, th {
 
 .tableamplia{
     width: auto !important;
+}
+.inputcodciuu, .tablenumiden, .tabledomatri, .tablecodpost, .tabledoobli {
+    width: 80px !important;
+    text-align: center !important;
 }
