--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/_ui-src/responsive/themes/psalpha/less/style.less
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/_ui-src/responsive/themes/psalpha/less/style.less
@@ -355,231 +355,224 @@ input[type="search"] {
 
 /*nueva estructura*/
 .cardsinfondo {
-	background: none;
+  background: none;
 }
-
 .miritmenu {
-	font-size: 14 px !important;
-	margin: 0px;
+  font-size: 14 px !important;
+  margin: 0px;
 }
-
 .cardmirit {
-	background: none;
-	font-size: 14 px !important;
-	margin: 0px;
-	padding-bottom: 0px;
+  background: none;
+  font-size: 14 px !important;
+  margin: 0px;
+  padding-bottom: 0px;
 }
-
 .cardtitle {
-	border: 1px solid #156ab5;
+  border: 1px solid #156ab5;
 }
-
-.miritmenu:hover, .miritmenu:active:hover {
-	outline: transparent;
+.miritmenu:hover,
+.miritmenu:active:hover {
+  outline: transparent;
 }
-
-.miritmenu:focus, .miritmenu:active:focus, .miritmenu.active:focus,
-	.miritmenu.focus, .miritmenu:active.focus, .miritmenu.active.focus {
-	outline: transparent;
+.miritmenu:focus,
+.miritmenu:active:focus,
+.miritmenu.active:focus,
+.miritmenu.focus,
+.miritmenu:active.focus,
+.miritmenu.active.focus {
+  outline: transparent;
 }
-
 .ajustemargen {
-	margin-top: 46px !important;
+  margin-top: 46px !important;
 }
 /* se ajusta la seccion de la cabecera que contiene el datos del usuario */
 .navigation--bottom .nav__link {
-	width: 110px;
-	/* width: 4 em; */
-	text-align: center;
+  width: 110px;
+  /* width: 4 em; */
+  text-align: center;
 }
-
 .navigation--middle {
-	padding-left: 30px;
-	padding-right: 30px;
+  padding-left: 30px;
+  padding-right: 30px;
 }
-
 .navigation--middle .nav__right {
-	width: 95%;
-	margin-right: 25px;
+  width: 95%;
+  margin-right: 25px;
 }
-
-.navigation--bottom .nav__links--primary .sub-navigation-section ul.sub-navigation-list>li>a:hover,
-	.navigation--bottom .nav__links--primary .sub-navigation-section ul.sub-navigation-list>li>a:focus
-	{
-	background: #3399ff;
-	text-decoration: none;
+.navigation--bottom .nav__links--primary .sub-navigation-section ul.sub-navigation-list > li > a:hover,
+.navigation--bottom .nav__links--primary .sub-navigation-section ul.sub-navigation-list > li > a:focus {
+  background: #3399ff;
+  text-decoration: none;
 }
-
-.main-header .md-secondary-navigation ul, .main-header .md-secondary-navigation ul li
-	{
-	font-weight: 600;
-	display: flex;
-	font-size: 12px;
-	text-transform: none;
-	color: #000;
-	border: none;
+.main-header .md-secondary-navigation ul,
+.main-header .md-secondary-navigation ul li {
+  font-weight: 600;
+  display: flex;
+  font-size: 12px;
+  text-transform: none;
+  color: #000;
+  border: none;
 }
-
 ul.nav__links li {
-	border-left: 1px solid #fff;
-	border-right: 1px solid #fff;
+  border-left: 1px solid #fff;
+  border-right: 1px solid #fff;
 }
-
 .navigation__overflow {
-	max-width: 90%;
-	height: auto;
-	display: block;
-	margin-left: auto;
-	margin-right: auto;
-	width: 90%;
+  max-width: 90%;
+  height: auto;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 90%;
 }
-
 .navigation--bottom {
-	max-width: 88%;
-	height: auto;
-	display: block;
-	margin-left: auto;
-	margin-right: auto;
-	width: 90%;
+  max-width: 88%;
+  height: auto;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 90%;
 }
-
 .navigation--bottom .nav__links--products {
-	max-width: 100%;
-	height: auto;
-	display: block;
-	margin-left: -15px;
-	margin-right: -15px;
-	width: 100%;
-	display: flex;
-	justify-content: center;
-	padding-left: 25px;
-	padding-right: 5px;
-	margin-bottom: 0;
+  max-width: 100%;
+  height: auto;
+  display: block;
+  margin-left: -15px;
+  margin-right: -15px;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  padding-left: 25px;
+  padding-right: 5px;
+  margin-bottom: 0;
 }
-
-.navigation--bottom .nav__links--primary .sub-navigation-section .sub-navigation-list li
-	{
-	width: 119px;
-	text-align: center;
+.navigation--bottom .nav__links--primary .sub-navigation-section .sub-navigation-list li {
+  width: 119px;
+  text-align: center;
 }
-
 .breadcrumb-section {
-	text-transform: none;
-	max-width: 90%;
-	height: auto;
-	display: block;
-	margin-left: auto;
-	margin-right: auto;
-	width: 88%;
-	border-top: 1px transparen #ffffff;
+  text-transform: none;
+  max-width: 90%;
+  height: auto;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 88%;
+  border-top: 1px transparen #ffffff;
 }
 /* terminan los ajustes de la sección del menú */
+
 header {
-	position: fixed;
-	z-index: 100;
-	width: 100%;
+  position: fixed;
+  z-index: 100;
+  width: 100%;
 }
 /* cambios para el container */
 .container {
-	max-width: 90%;
-	height: auto;
-	display: block;
-	margin-left: auto;
-	margin-right: auto;
-	width: 88%;
-	padding: 0 !important;
-	/* 	margin-right: 1px !important; */
-	margin-right: 10%;
-	margin-left: 80px !important;
-	/* 	padding-top: 310px !important; */
-}
-
-.container_new {
-	max-width: 90%;
-	height: auto;
-	display: block;
-	margin-left: auto;
-	margin-right: auto;
-	width: 88%;
-/* 	padding: 0 !important; */
-	/* 	margin-right: 1px !important; */
-	margin-right: 10%;
-	margin-left: 80px !important;
-	padding-top: 25%;
-}
-
-.container_agentes_inicial {
-	 padding-top: 28%;
-	  max-width: 90%;
+  max-width: 90%;
   height: auto;
   display: block;
-  width: 86%;
-   margin-right: 1px !important;
-  margin-left: 97px !important;
-
+  margin-left: auto;
+  margin-right: auto;
+  width: 88%;
+  padding: 0 !important;
+  /* 	margin-right: 1px !important; */
+  margin-right: 10%;
+  margin-left: 80px !important;
+  /* 	padding-top: 310px !important; */
 }
-
+.container_new {
+  max-width: 90%;
+  height: auto;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 88%;
+  /* 	padding: 0 !important; */
+  /* 	margin-right: 1px !important; */
+  margin-right: 10%;
+  margin-left: 80px !important;
+  padding-top: 25%;
+}
+.container_new_contrib{
+  max-width: 90%;
+  height: auto;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 88%;
+  /* 	padding: 0 !important; */
+  /* 	margin-right: 1px !important; */
+  margin-right: 10%;
+  margin-left: 80px !important;
+  padding-top: 18%;
+}
 .login-section {
-	padding-top: 45%;
+  padding-top: 40%;
 }
-
 .delededucciones {
-	pointer-events: none;
-	position: absolute;
-	width: 100%;
-	height: auto;
-	margin-bottom: 80px !important;
+  pointer-events: none;
+  position: absolute;
+  width: 100%;
+  height: auto;
+  margin-bottom: 80px !important;
+  max-width:90%;
 }
-
 thead {
-    background-color: rgb(235, 235, 228) !important;
-    text-color: #ffffff !important;
+  background-color: #ebebe4 !important;
+  text-color: #ffffff !important;
 }
-
-td, th {
-    border-top: solid 1px #000000 !important;
-    border-bottom: solid 1px #000000 !important;
-    border-right: solid 1px #000000 !important;
-    border-left: solid 1px #000000 !important;
-    vertical-align: inherit !important;
+td,
+th {
+  border-top: solid 1px #000000 !important;
+  border-bottom: solid 1px #000000 !important;
+  border-right: solid 1px #000000 !important;
+  border-left: solid 1px #000000 !important;
+  vertical-align: inherit !important;
 }
-
 .labeltabletd {
-    text-align: center !important;
-    color: #1b1464 !important;
-    text-transform: none !important;
-
-    width: 100%;
-
+  text-align: center !important;
+  color: #1b1464 !important;
+  text-transform: none !important;
 }
-
-.inputcodciuu, .tablenumiden, .tabledomatri, .tablecodpost {
-    width: 80px !important;
-    text-align: center !important;
+.inputcodciuu,
+.tablenumiden,
+.tabledomatri,
+.tablecodpost {
+  width: 80px !important;
+  text-align: center !important;
 }
-
-.tablefechas, .tableident  {
-    width: 75px !important;
-    text-align: center !important;
+.tablefechas,
+.tableident {
+  width: 75px !important;
+  text-align: center !important;
 }
-
-.tablenombre, .tabledenomi  {
-    width: 400px !important;
+.tablenombre,
+.tabledenomi {
+  width: 300px !important;
 }
-
-.tablecantperoc  {
-    width: 55px !important;
-    text-align: center !important;
+.tablenombrecorto {
+  width: 200px !important;
 }
-
+.tablecantperoc {
+  width: 55px !important;
+  text-align: center !important;
+}
 .tabletiprela {
-    width: 300px !important;
+  width: 130px !important;
+}
+.tableamplia {
+  width: auto !important;
 }
 
-.tableamplia{
-    width: auto !important;
+.form-group .newalto{
+	    height: 38px !important;
+	    min-height: 30px !important;
+	    width: 70%;
+	
 }
-.inputcodciuu, .tablenumiden, .tabledomatri, .tablecodpost, .tabledoobli {
-    width: 80px !important;
-    text-align: center !important;
+.form-group .new_alto{
+	    height: 38px !important;
+	    min-height: 30px !important;
 }
+	
