cambios de estilo

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/_ui-src/responsive/themes/psalpha/less/style.less
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/_ui-src/responsive/themes/psalpha/less/style.less
@@ -353,6 +353,7 @@ input[type="search"] {
     margin-left: 6.66666667%;
   }  
 
+
 /*nueva estructura*/
 .cardsinfondo {
   background: none;
@@ -461,7 +462,6 @@ ul.nav__links li {
   border-top: 1px transparen #ffffff;
 }
 /* terminan los ajustes de la sección del menú */
-
 header {
   position: fixed;
   z-index: 100;
@@ -474,7 +474,7 @@ header {
   display: block;
   margin-left: auto;
   margin-right: auto;
-  width: 88%;
+  width: 86%;
   padding: 0 !important;
   /* 	margin-right: 1px !important; */
   margin-right: 10%;
@@ -494,13 +494,13 @@ header {
   margin-left: 80px !important;
   padding-top: 25%;
 }
-.container_new_contrib{
+.container_new_contrib {
   max-width: 90%;
   height: auto;
   display: block;
   margin-left: auto;
   margin-right: auto;
-  width: 88%;
+  width: 86%;
   /* 	padding: 0 !important; */
   /* 	margin-right: 1px !important; */
   margin-right: 10%;
@@ -516,7 +516,7 @@ header {
   width: 100%;
   height: auto;
   margin-bottom: 80px !important;
-  max-width:90%;
+  max-width: 90%;
 }
 thead {
   background-color: #ebebe4 !important;
@@ -564,15 +564,19 @@ th {
 .tableamplia {
   width: auto !important;
 }
-
-.form-group .newalto{
-	    height: 38px !important;
-	    min-height: 30px !important;
-	    width: 70%;
-	
+.form-group .newalto, .newalto {
+  height: 38px !important;
+  min-height: 30px !important;
+  width: 70%;
 }
-.form-group .new_alto{
-	    height: 38px !important;
-	    min-height: 30px !important;
+.form-group .new_alto, .new_alto {
+  height: 38px !important;
+  min-height: 30px !important;
+}
+
+.etiqlargas{
+	 height: 38px !important;
+  min-height: 30px !important;
+  width: 28%;
 }
 	
