Se agregan cambios para mostrar los mensajes de error dentro de la pantalla y se agregan cambios al tamaño de los campos de tramites y declaraciones

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/_ui-src/responsive/themes/psalpha/less/style.less
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/_ui-src/responsive/themes/psalpha/less/style.less
@@ -474,12 +474,8 @@ header {
   display: block;
   margin-left: auto;
   margin-right: auto;
-  width: 86%;
+  width: 85%;
   padding: 0 !important;
-  /* 	margin-right: 1px !important; */
-  margin-right: 10%;
-  margin-left: 80px !important;
-  /* 	padding-top: 310px !important; */
 }
 .container_new {
   max-width: 90%;
@@ -487,12 +483,12 @@ header {
   display: block;
   margin-left: auto;
   margin-right: auto;
-  width: 88%;
-  /* 	padding: 0 !important; */
-  /* 	margin-right: 1px !important; */
-  margin-right: 10%;
-  margin-left: 80px !important;
-  padding-top: 25%;
+  width: 86%;
+  margin-right: auto;
+  margin-left: auto;
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-top: 27%;
 }
 .container_new_contrib {
   max-width: 90%;
@@ -501,10 +497,6 @@ header {
   margin-left: auto;
   margin-right: auto;
   width: 86%;
-  /* 	padding: 0 !important; */
-  /* 	margin-right: 1px !important; */
-  margin-right: 10%;
-  margin-left: 80px !important;
   padding-top: 18%;
 }
 .login-section {
@@ -564,19 +556,23 @@ th {
 .tableamplia {
   width: auto !important;
 }
-.form-group .newalto, .newalto {
+.form-group .newalto,
+.newalto {
   height: 38px !important;
   min-height: 30px !important;
   width: 70%;
 }
-.form-group .new_alto, .new_alto {
+.form-group .new_alto,
+.new_alto {
   height: 38px !important;
   min-height: 30px !important;
 }
-
-.etiqlargas{
-	 height: 38px !important;
+.etiqlargas {
+  height: 38px !important;
   min-height: 30px !important;
   width: 28%;
 }
-	
+
+.headline{
+margin-left: 11px;
+}
