--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/_ui/responsive/theme-psalpha/css/style.css
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/_ui/responsive/theme-psalpha/css/style.css
@@ -24433,7 +24433,7 @@ header {
   display: block;
   margin-left: auto;
   margin-right: auto;
-  width: 88%;
+  width: 86%;
   padding: 0 !important;
   /* 	margin-right: 1px !important; */
   margin-right: 10%;
@@ -24459,7 +24459,7 @@ header {
   display: block;
   margin-left: auto;
   margin-right: auto;
-  width: 88%;
+  width: 86%;
   /* 	padding: 0 !important; */
   /* 	margin-right: 1px !important; */
   margin-right: 10%;
@@ -24523,12 +24523,19 @@ th {
 .tableamplia {
   width: auto !important;
 }
-.form-group .newalto {
+.form-group .newalto,
+.newalto {
   height: 38px !important;
   min-height: 30px !important;
   width: 70%;
 }
-.form-group .new_alto {
+.form-group .new_alto,
+.new_alto {
   height: 38px !important;
   min-height: 30px !important;
+}
+.etiqlargas {
+  height: 38px !important;
+  min-height: 30px !important;
+  width: 28%;
 }
