Se agregan cambios para el ajuste de los campos de acuerdo con su contenido

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/_ui-src/responsive/themes/psalpha/less/style.less
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/_ui-src/responsive/themes/psalpha/less/style.less
@@ -481,14 +481,12 @@ header {
   max-width: 90%;
   height: auto;
   display: block;
-  margin-left: auto;
-  margin-right: auto;
   width: 86%;
   margin-right: auto;
   margin-left: auto;
   padding-left: 10px;
   padding-right: 10px;
-  padding-top: 27%;
+  padding-top: 28%;
 }
 .container_new_contrib {
   max-width: 90%;
@@ -499,13 +497,10 @@ header {
   width: 86%;
   padding-top: 18%;
 }
-.login-section {
-  padding-top: 40%;
-}
 .delededucciones {
   pointer-events: none;
   position: absolute;
-  width: 100%;
+  width: 85%;
   height: auto;
   margin-bottom: 80px !important;
   max-width: 90%;
@@ -530,12 +525,12 @@ th {
 .inputcodciuu,
 .tablenumiden,
 .tabledomatri,
-.tablecodpost {
+.tablecodpost,  .tabledoobli {
   width: 80px !important;
   text-align: center !important;
 }
 .tablefechas,
-.tableident {
+.tableident, .tableangrav {
   width: 75px !important;
   text-align: center !important;
 }
@@ -572,7 +567,6 @@ th {
   min-height: 30px !important;
   width: 28%;
 }
-
-.headline{
-margin-left: 11px;
+.headline {
+  margin-left: 11px;
 }
